# Spotify

./: .cache  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
deploy/: README.md
deploy/ecs/: README.md  predict-task-definition.json  taste-os-task-definition.json
deploy/kubernetes/: README.md  outputs-pvc.yaml  predict-configmap.example.yaml  predict-deployment.yaml  predict-secret.example.yaml  predict-service.yaml  taste-os-configmap.example.yaml  taste-os-deployment.yaml  taste-os-secret.example.yaml  taste-os-service.yaml
deploy/local/: .env.example  README.md  production-smoke.compose.yaml
deploy/terraform/aws/: README.md  main.tf  outputs.tf  terraform.tfvars.cheap-balanced.example  terraform.tfvars.example  variables.tf  versions.tf
docs/: 90_day_roadmap.md  analytics_db.md  aws_athena_import.md  benchmark_contract.md  claim_to_demo.md  control_room_operating_rhythm.md  creator_label_intelligence_brief.md  creator_market_intelligence.md  data_science_quant.md  day_90_launch.md  doctorate_roadmap.md  front_door.md  higher_level_branches.md  listening_comparison_roadmap.md  outward_package.md  personal_taste_os.md  project_health.md  project_threads.md  public_training_datasets.md  publication_outline.md  recommender_expansion_architecture.md  recommender_model_dataset_use_case_catalog.md  recommender_safety_platform.md  refactor_optimization_log.md  research_platform_lab.md  scope_expansion_lab.md  show_ready_maintenance.md  taste_os_demo_contract.md  taste_os_demo_walkthrough.md  taste_os_product_story.md  weeks_1_8_readiness.md
scripts/: aggregate_benchmark.py  build_analytics_db.py  check_acceleration.py  control_room_guard.py  export_athena_bundle.py  prune_artifacts.py  prune_artifacts.sh  regression_alert.py  regression_guard.py  rerun_classical_backtest.sh  run_benchmark_lock.sh  run_core.sh  run_deep_benchmark_low_ram.sh  run_everything.sh  run_everything_all_deep_low_ram.sh  run_everything_balanced_full.sh  run_everything_cpu_boost.sh  run_everything_gpu.sh  run_experimental.sh  run_fast.sh  run_full.sh  run_scheduled.sh  setup_metal_venv.sh  storage_report.py
spotify/: __init__.py  analytics_db.py  analytics_warehouse.py  artifact_cleanup.py  aws_athena.py  aws_athena_export.py  aws_athena_sql.py  backtesting.py  benchmark_contract.py  benchmarks.py  bert4rec_model.py  branch_portfolio.py  catalog_utils.py  causal_friction.py  champion_alias.py  champion_gate_refresh.py  claim_to_demo.py  cli.py  compare_public.py  config.py  control_room.py  control_room_business.py  control_room_core.py  control_room_history.py  control_room_rendering.py  control_room_selection.py  control_room_triage.py  creator_benchmark_contract.py  creator_evidence_lab.py  creator_label_intelligence.py  creator_market_intelligence.py  data.py  data_preparation.py  data_quality.py  dcn_v2_model.py  deep_benchmark_finalizer.py  deep_tuning.py  deployment_registry.py  digital_twin.py  drift.py  (+138 more)
spotify_extended_pipeline.egg-info/: PKG-INFO  PKG-INFO 2  PKG-INFO 4  SOURCES 2.txt  SOURCES 4.txt  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_aggregate_benchmark.py  test_analytics_warehouse.py  test_artifact_cleanup.py  test_athena_export.py  test_audio_features.py  test_benchmark_contract.py  test_benchmarks_features.py  test_bert4rec_model.py  test_branch_portfolio.py  test_branch_portfolio_cli_smoke.py  test_champion_alias.py  test_champion_gate_refresh.py  test_claim_to_demo.py  test_claim_to_demo_cli_smoke.py  test_classical_metrics.py  test_cli_smoke.py  test_compare_public.py  test_compare_public_cli_smoke.py  test_compare_run_timings.py  test_config_smoke.py  test_control_room.py  test_control_room_cli_smoke.py  test_control_room_guard.py  test_creator_benchmark_contract.py  test_creator_evidence_lab.py  test_creator_label_intelligence.py  test_creator_market_intelligence.py  test_data_discovery.py  test_data_quality_gate.py  test_day_90_launch.py  test_dcn_v2_model.py  test_deep_benchmark_finalizer.py  test_deep_tuning.py  test_deploy_manifests.py  test_deployment_registry.py  test_digital_twin.py  test_drift_and_backtesting.py  test_env_loader.py  test_explainability.py  test_feature_engineering_extended.py  (+106 more)
