[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-extended-pipeline"
version = "0.1.0"
description = "Personal Taste OS for Spotify streaming history: experimentation, session planning, public insights, and serving"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "catboost>=1.2",
  "duckdb>=1.1",
  "joblib>=1.4",
  "matplotlib>=3.9",
  "numpy>=1.26",
  "pandas>=2.2",
  "orjson>=3.10",
  "psutil>=5.9",
  "scikit-learn>=1.5",
  "tensorflow>=2.16",
  "mlflow>=2.17",
  "optuna>=3.6",
]

[project.optional-dependencies]
extras = [
  "spotipy>=2.24",
  "shap>=0.46",
  "gputil>=1.4",
]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
]

[project.scripts]
spotify-lab = "spotify.cli:main"
spotify-predict = "spotify.predict_next:main"
spotify-serve = "spotify.predict_service:main"
spotify-public-insights = "spotify.public_insights:main"
spotify-compare-public = "spotify.compare_public:main"
spotify-control-room = "spotify.control_room:main"
spotify-research-claims = "spotify.research_claims:main"
spotify-branch-portfolio = "spotify.branch_portfolio:main"
spotify-outward-package = "spotify.outward_package:main"
spotify-taste-os-demo = "spotify.taste_os_demo:main"
spotify-taste-os-showcase = "spotify.taste_os_showcase:main"
spotify-taste-os-serve = "spotify.taste_os_service:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["spotify*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = [
  "spotify/champion_alias.py",
  "spotify/data_quality.py",
  "spotify/predict_next.py",
  "spotify/predict_service.py",
  "spotify/governance.py",
]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
follow_imports = "skip"
