[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-extended-pipeline"
version = "0.1.0"
description = "Personal Taste OS for Spotify streaming history: experimentation, session planning, public insights, and serving"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "catboost>=1.2",
  "boto3>=1.35",
  "duckdb>=1.1",
  "fastapi>=0.115",
  "google-cloud-storage>=2.18",
  "joblib>=1.4",
  "lightgbm>=4.6",
  "matplotlib>=3.9",
  "numpy>=1.26",
  "opentelemetry-api>=1.36",
  "opentelemetry-sdk>=1.36",
  "pandas>=2.2",
  "orjson>=3.10",
  "psycopg[binary]>=3.2",
  "psutil>=5.9",
  "PyJWT>=2.9",
  "redis>=5.2",
  "scikit-learn>=1.5",
  "SQLAlchemy>=2.0",
  "tensorflow>=2.16",
  "mlflow>=2.17",
  "optuna>=3.6",
  "uvicorn>=0.30",
  "xgboost>=3.0",
]

[project.optional-dependencies]
extras = [
  "spotipy>=2.24",
  "shap>=0.46",
  "gputil>=1.4",
]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
]

[project.scripts]
spotify-lab = "spotify.cli:main"
spotify-predict = "spotify.predict_next:main"
spotify-serve = "spotify.predict_service:main"
spotify-build-serving-bundle = "spotify.serving_bundle:main"
spotify-serve-api = "spotify.service_api:main"
spotify-predict-api = "spotify.service_api:main_predict"
spotify-taste-os-api = "spotify.service_api:main_taste_os"
spotify-deploy-release = "spotify.deployment_registry:main"
spotify-release-readiness = "spotify.release_readiness:main"
spotify-production-smoke = "spotify.production_smoke:main"
spotify-public-insights = "spotify.public_insights:main"
spotify-compare-public = "spotify.compare_public:main"
spotify-control-room = "spotify.control_room:main"
spotify-research-claims = "spotify.research_claims:main"
spotify-claim-to-demo = "spotify.claim_to_demo:main"
spotify-front-door = "spotify.front_door:main"
spotify-branch-portfolio = "spotify.branch_portfolio:main"
spotify-outward-package = "spotify.outward_package:main"
spotify-day-90-launch = "spotify.day_90_launch:main"
spotify-show-ready-backfill = "spotify.show_ready_backfill:main"
spotify-show-ready-maintenance = "spotify.show_ready_maintenance:main"
spotify-taste-os-demo = "spotify.taste_os_demo:main"
spotify-taste-os-showcase = "spotify.taste_os_showcase:main"
spotify-taste-os-serve = "spotify.taste_os_service:main"
spotify-refresh-champion-gate = "spotify.champion_gate_refresh:main"
spotify-listener-archetypes = "spotify.listener_archetypes:main"
spotify-quant-decision-lab = "spotify.quant_decision_lab:main"
spotify-creator-market-intelligence = "spotify.creator_market_intelligence:main"
spotify-creator-evidence-lab = "spotify.creator_evidence_lab:main"
spotify-research-platform-lab = "spotify.research_platform_lab:main"
spotify-scope-expansion-lab = "spotify.scope_expansion_lab:main"
spotify-project-health = "spotify.project_health:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["spotify*"]

[tool.setuptools.exclude-package-data]
"*" = [".DS_Store", "* 2.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = [
  "spotify/champion_alias.py",
  "spotify/data_quality.py",
  "spotify/predict_next.py",
  "spotify/predict_service.py",
  "spotify/service_api.py",
  "spotify/service_auth.py",
  "spotify/serving_bundle.py",
  "spotify/taste_os_service.py",
  "spotify/taste_os_state.py",
  "spotify/deployment_registry.py",
  "spotify/release_readiness.py",
  "spotify/production_smoke.py",
  "spotify/governance.py",
]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
follow_imports = "skip"
